chore: remove metadata.json, update .gitignore, and refine README
- Deleted unused `metadata.json`.
- Updated `.gitignore` to exclude runtime database files and output artifacts.
- Removed outdated "Real-Time RAG" reference from the README.
- Renamed package in `package.json` from "react-example" to "finsurf".

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,11 @@ coverage/
 *.log
 .env*
 !.env.example
+
+# Runtime SQLite databases (generated at runtime; not part of the source tree)
+*.db
+*.db-wal
+*.db-shm
+
+# Captured output artifacts
+.output.txt
